--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 <body>
 
 <header class="main-header">
+  
     <div class="layers">
+  
+      <div class="layer layers__base" style="background-image: url(img/fon-norm.png);"></div>
+      <div class="layer layers__middle" style="background-image: url(img/2l.png);"></div>
+      <div class="layer layers__front" style="background-image: url(img/1l.png);"></div>
+     
       <div class="layer_header">
         <div class="layers__caption">Welcome</div>
         <div class="layers__title">To my first site</div>
       </div>
-      <div class="layer layers__base" style="background-image: url(img/fon-norm.png);"></div>
-      <div class="layer layers__title" style="background-image: url(img/2L.png);"></div>
-      <div class="layer layers__front" style="background-image: url(img/beautiful_landscape_night_mountains_4k_cec5f072-e7d3-476d-acd4-fc02c35c0813.png);"></div>
+
     </div>
 </header>
 
