--- a/index.html
+++ b/index.html
@@ -9,34 +9,26 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="js/app.js" defer></script>
 
-
 </head>
 <body>
 
 <header class="main-header">
-  
-    <div class="layers">
-  
+      <div class="layers">  
       <div class="layer layers__base" style="background-image: url(img/fon-norm.png);"></div>
       <div class="layer layers__middle" style="background-image: url(img/2l.png);"></div>
       <div class="layer layers__front" style="background-image: url(img/1l.png);"></div>
-     
       <div class="layer_header">
         <div class="layers__caption">Welcome</div>
         <div class="layers__title">To my first site</div>
       </div>
-
     </div>
 </header>
-
   <article class="main-article" style="background-image: url(img/night_dungeon_high_image_b4eae147-6499-434a-8bc5-9a578cfa9ea8.png);">
     <div class="main-article__content">
-      <h2 class="main-article__header">To be continued</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nihil inventore deleniti quisquam ipsam? Nesciunt aliquam ipsa iure quo repellendus atque culpa inventore assumenda ex voluptate quas, odio cum earum rem eveniet.</p>
+      <h2 class="main-article__header">To be continued </h2>
+      <p class="main-article__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nihil inventore deleniti quisquam ipsam? Nesciunt aliquam ipsa iure quo repellendus atque culpa inventore assumenda ex voluptate quas, odio cum earum rem eveniet. </p>
     </div>
     <div class="copy">© WebDesign Master</div>
   </article>
-
-  
 </body>
 </html>
